RESOLVED FIXED 250922
REGRESSION (256863@main): [ iOS ] imported/w3c/web-platform-tests/webstorage/storage_local_window_open.window.html is a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=250922
Summary REGRESSION (256863@main): [ iOS ] imported/w3c/web-platform-tests/webstorage/...
Karl Rackler
Reported 2023-01-20 16:58:02 PST
Description: imported/w3c/web-platform-tests/webstorage/storage_local_window_open.window.html The history shows the test consistently passing until starting at 256863@main when it began to consistently timeout. Since the commit deals with WebProcess/WebStorage, this is most likely the source of the consistent timeouts. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebstorage%2Fstorage_local_window_open.window.html&platform=ios&platform=mac&flavor=gpuprocess&flavor=wk2&architecture=x86_64
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-20 16:58:31 PST
Karl Rackler
Comment 2 2023-01-20 17:01:23 PST
I have marked this test as a consistent timeout while this issue is investigated.
EWS
Comment 3 2023-01-20 17:17:33 PST
Test gardening commit 259157@main (d04e38cdcd32): <https://commits.webkit.org/259157@main> Reviewed commits have been landed. Closing PR #8905 and removing active labels.
Sihui Liu
Comment 4 2023-01-27 12:23:23 PST
EWS
Comment 5 2023-01-30 10:57:18 PST
Committed 259571@main (4590ce7d98b4): <https://commits.webkit.org/259571@main> Reviewed commits have been landed. Closing PR #9249 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.